@@ -1,3 +1,6 @@
+2014-07-21 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
+	* Display when actions are in progress AND delayed (ticket #18)
+
 2014-07-11 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
 	* Add warning threshold. With the 'warnings' property, milkcheck set a
 	service in WARNING state if 'warnings' < actions in error status < 'errors'
